@@ -1,16 +1,16 @@
-ff7022ea9ef40efbfa662cfd2610bc45 *DESCRIPTION
+cd2b8e9f3dc844ae6fc1e5d551eda3b5 *DESCRIPTION
 253457c7632c75e465a2a23d604b0a49 *NAMESPACE
 5f46b25a049e81e86774e78cd294ff89 *R/AIC-mclogit.R
 7b1e9ee3e3ef8d915b8cd2485db79b62 *R/anova-mclogit.R
-a807d113ca4268914fc1db4e4ef06d01 *R/blockMatrices.R
+93500a8be28832c880c99ea0bbfcbb24 *R/blockMatrices.R
 dacab808f8b9ce42192cf24ea874652a *R/emmeans.R
 fa959f9bebaf365d4cf273e33f4cebde *R/formula-utils.R
 e83609e43103c2645274bd60bd3badf0 *R/getSummary-mblogit.R
 a78012b2522420f4e4fcc38760d5fe85 *R/getSummary-mclogit.R
-e11e37f4f188bb196ea42d18e13b084b *R/mblogit.R
+e408f51d78128fb90e2cd6a833c2dcc9 *R/mblogit.R
 f814c3a2ac1bd0a7a0d953085bb68f4d *R/mclogit-dispersion.R
 9b50da844676fa0ac31cc173f5472c02 *R/mclogit-fit.R
-b51de5b3adbc3f99092523c75703ea98 *R/mclogit.R
+855b2785b462b728ffc3418b38d8e5b4 *R/mclogit.R
 78830475ad62c28b244985c0b1d60429 *R/mmclogit-fitPQLMQL.R
 457a0140aed815ca117ea94b2599e3b2 *R/zzz.R
 1961639f6f4f7f9efffa91b624b3d060 *build/partial.rdb
@@ -19,7 +19,7 @@ fe44b1179e12537413f7fd898a7c5ee2 *data/Transport.rda
 ed465db40af36367e177732466dfb56b *demo/00Index
 8d2478382a70e25be6cf209394748af2 *demo/mclogit.test.R
 40dc38ba49744a8f05ca9463b8e54c28 *demo/test-mblogit-random-nonnested.R
-c56d05155b9512de6f949ecbefe6f6cd *inst/ChangeLog
+e5226b5d99550a6873a9dc449939d5a2 *inst/ChangeLog
 2f897237099dc581ac88952ae4870f9a *inst/NEWS.Rd
 c05ff442f7a2312ff8f3d6b5aa96ddeb *man/Transport.Rd
 0fa123411869d0d1646b5b58b5a9ad6d *man/dispersion.Rd
